moved the RegUnRegAccessKey to the Destroy method b=47302 r=kmcclusk